--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "igorw/config-service-provider": "~1.0",
         "dflydev/doctrine-orm-service-provider": "1.0.6",
 		"cboden/ratchet": "~0.3",
-		"cocur/slugify": "~1.1"
+		"cocur/slugify": "~1.1",
+		"pelago/emogrifier": "dev-master",
     },
     "require-dev": {
         "phpunit/phpunit": "4.1"
