--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "dflydev/doctrine-orm-service-provider": "1.0.6",
 		"cboden/ratchet": "~0.3",
 		"cocur/slugify": "~1.1",
-		"pelago/emogrifier": "dev-master"
+		"pelago/emogrifier": "dev-master",
+		"knplabs/knp-components": "~1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1"
