--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - hhvm
 
 before_script:
+  - composer self-update
   - composer install --dev
 
 script: phpunit --configuration phpunit.xml.dist
