--- a/composer.json
+++ b/composer.json
@@ -13,41 +13,45 @@
         }
     ],
     "require": {
-        "silex/silex": "~1.2",
-        "symfony/browser-kit": "~2.5",
-        "symfony/console": "~2.5",
-        "symfony/config": "~2.5",
-        "symfony/css-selector": "~2.5",
-        "symfony/dom-crawler": "~2.5",
-        "symfony/filesystem": "~2.5",
-        "symfony/finder": "~2.5",
-        "symfony/form": "~2.5",
-        "symfony/locale": "~2.5",
-        "symfony/process": "~2.5",
-        "symfony/security": "~2.5",
-        "symfony/serializer": "~2.5",
-        "symfony/translation": "~2.5",
-        "symfony/validator": "~2.5",
-        "symfony/monolog-bridge": "~2.5",
-        "symfony/twig-bridge": "~2.5",
-		"symfony/doctrine-bridge": "~2.5",
-		"symfony/framework-bundle": "2.5",
+        "silex/silex": "<1.3",
+        "symfony/browser-kit": "~2.3,<2.7",
+        "symfony/config": "~2.3,<2.7",
+        "symfony/console": "~2.3,<2.7",
+        "symfony/css-selector": "~2.3,<2.7",
+        "symfony/doctrine-bridge": "~2.3,<2.7",
+        "symfony/dom-crawler": "~2.3,<2.7",
+        "symfony/filesystem": "~2.3,<2.7",
+        "symfony/finder": "~2.3,<2.7",
+        "symfony/form": "~2.3,<2.7",
+        "symfony/framework-bundle": "~2.3,<2.7",
+        "symfony/locale": "~2.3,<2.7",
+        "symfony/monolog-bridge": "~2.3,<2.7",
+        "symfony/process": "~2.3,<2.7",
+        "symfony/security": "~2.3,<2.7",
+        "symfony/security-csrf": "~2.3,<2.7",
+        "symfony/serializer": "~2.3,<2.7",
+        "symfony/stopwatch": "~2.3,<2.7",
+        "symfony/translation": "~2.3,<2.7",
+        "symfony/twig-bridge": "~2.3,<2.7",
+        "symfony/validator": "~2.3,<2.7",
+        "symfony/yaml": "~2.3,<2.7",
+        "symfony/options-resolver": "~2.3,<2.7",
         "doctrine/dbal": "~2.4",
         "doctrine/migrations": "1.0.*@dev",
         "doctrine/orm": "~2.4",
-		"saxulum/saxulum-doctrine-orm-manager-registry-provider": "~2.1",
+	"saxulum/saxulum-doctrine-orm-manager-registry-provider": "~2.1",
         "swiftmailer/swiftmailer": "5.*",
         "igorw/config-service-provider": "~1.2",
         "dflydev/doctrine-orm-service-provider": "1.0.6",
-		"cboden/ratchet": "~0.3",
-		"cocur/slugify": "~1.1",
-		"pelago/emogrifier": "dev-master",
-		"knplabs/knp-components": "~1.2"
+	"cboden/ratchet": "~0.3",
+	"cocur/slugify": "~1.1",
+	"pelago/emogrifier": "dev-master",
+	"knplabs/knp-components": "~1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1"
     },
-	"autoload": {
+    "autoload": {
         "psr-0": {
             "": "src/"
         }
@@ -57,7 +61,7 @@
             "Application\\Test\\": "test/Application/Test/"
         }
     },
-	"scripts": {
+    "scripts": {
         "post-install-cmd": "Application\\Tool\\Composer::postInstallCmd",
         "post-update-cmd": "Application\\Tool\\Composer::postUpdateCmd"
     },
