--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
   - composer self-update
   - composer install --dev
 
-script: phpunit --configuration phpunit.xml.dist
+script: phpunit --configuration phpunit.xml
