--- a/app/configs/validation.yml
+++ b/app/configs/validation.yml
@@ -58,5 +58,9 @@ Application\Entity\UserEntity:
             - NotBlank:
                 message: errors.user.password.notBlank
                 groups: [ new, register, settingsPassword, resetPasswordReset ]
+        oldPassword:
+            - Symfony\Component\Security\Core\Validator\Constraints\UserPassword:
+                message: errors.user.password.oldIsInvalid
+                groups: [ settingsPassword ]
         profile:
             - Valid: ~
