--- a/composer.json
+++ b/composer.json
@@ -13,37 +13,34 @@
         }
     ],
     "require": {
-        "silex/silex": "<1.3",
-        "symfony/browser-kit": "~2.3,<2.7",
-        "symfony/config": "~2.3,<2.7",
-        "symfony/console": "~2.3,<2.7",
-        "symfony/css-selector": "~2.3,<2.7",
-        "symfony/doctrine-bridge": "~2.3,<2.7",
-        "symfony/dom-crawler": "~2.3,<2.7",
-        "symfony/filesystem": "~2.3,<2.7",
-        "symfony/finder": "~2.3,<2.7",
-        "symfony/form": "~2.3,<2.7",
-        "symfony/framework-bundle": "~2.3,<2.7",
-        "symfony/locale": "~2.3,<2.7",
-        "symfony/monolog-bridge": "~2.3,<2.7",
-        "symfony/process": "~2.3,<2.7",
-        "symfony/security": "~2.3,<2.7",
-        "symfony/security-csrf": "~2.3,<2.7",
-        "symfony/serializer": "~2.3,<2.7",
-        "symfony/stopwatch": "~2.3,<2.7",
-        "symfony/translation": "~2.3,<2.7",
-        "symfony/twig-bridge": "~2.3,<2.7",
-        "symfony/validator": "~2.3,<2.7",
-        "symfony/yaml": "~2.3,<2.7",
-        "symfony/options-resolver": "~2.3,<2.7",
-        "doctrine/dbal": "~2.4",
-        "doctrine/migrations": "1.0.*@dev",
-        "doctrine/orm": "~2.4",
+        "silex/silex": "~1.3",
+        "symfony/browser-kit":"~2.7,<3.0",
+        "symfony/config":"~2.7,<3.0",
+        "symfony/css-selector":"~2.7,<3.0",
+        "symfony/doctrine-bridge":"~2.7,<3.0",
+        "symfony/dom-crawler":"~2.7,<3.0",
+        "symfony/filesystem":"~2.7,<3.0",
+        "symfony/form":"~2.7,<3.0",
+        "symfony/framework-bundle":"~2.7,<3.0",
+        "symfony/locale":"~2.7,<3.0",
+        "symfony/monolog-bridge":"~2.7,<3.0",
+        "symfony/options-resolver":"~2.7,<3.0",
+        "symfony/process":"~2.7,<3.0",
+        "symfony/security":"~2.7,<3.0",
+        "symfony/security-csrf":"~2.7,<3.0",
+        "symfony/serializer":"~2.7,<3.0",
+        "symfony/stopwatch":"~2.7,<3.0",
+        "symfony/translation":"~2.7,<3.0",
+        "symfony/twig-bridge":"~2.7,<3.0",
+        "symfony/validator":"~2.7,<3.0",
+        "symfony/yaml":"~2.7,<3.0",
+        "doctrine/dbal":"~2.5",
+        "doctrine/migrations":"1.0.*@dev",
+        "doctrine/orm":"~2.5",
         "saxulum/saxulum-doctrine-orm-manager-registry-provider": "~2.1",
         "swiftmailer/swiftmailer": "5.*",
         "igorw/config-service-provider": "~1.2",
         "dflydev/doctrine-orm-service-provider": "1.0.6",
-        "cboden/ratchet": "~0.3",
         "cocur/slugify": "~1.1",
         "pelago/emogrifier": "dev-master",
         "knplabs/knp-components": "~1.2"
