--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/doctrine-bridge":"~2.7,<3.0",
         "symfony/dom-crawler":"~2.7,<3.0",
         "symfony/filesystem":"~2.7,<3.0",
+        "symfony/finder":"~2.7,<3.0",
         "symfony/form":"~2.7,<3.0",
         "symfony/framework-bundle":"~2.7,<3.0",
         "symfony/locale":"~2.7,<3.0",
