--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
         "modernizr": "~2.8",
         "moment": "~2.9",
         "respond": "~1.4",
+        "uri.js": "~1.15.0",
         "restangular": "~1.4"
     },
     "resolutions": {
