--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "dflydev/doctrine-orm-service-provider": "1.0.6",
         "cocur/slugify": "~1.1",
         "pelago/emogrifier": "1.0.*@dev",
-        "knplabs/knp-components": "~1.2"
+        "knplabs/knp-components": "~1.2",
+        "twig/twig": "~1.23"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1"
