--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Application\\": "src/"
+            "Application\\": "src/Application/"
         }
     },
     "autoload-dev": {
