--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,6 @@
     "author": "Borut Balazek <bobalazek124@gmail.com>",
     "name": "bobalazek-web-application-starter-kit",
     "dependencies": {
-        "angular-latest": "~1.3",
-        "angular-ui-bootstrap": "~0.12",
-        "angular-ui-router": "~0.2",
         "animate.css": "~3.2",
         "appear": "~0.3",
         "autobahn": "~0.9",
@@ -22,8 +19,7 @@
         "modernizr": "~2.8",
         "moment": "~2.9",
         "respond": "~1.4",
-        "uri.js": "~1.15.0",
-        "restangular": "~1.4"
+        "uri.js": "~1.15.0"
     },
     "resolutions": {
         "d3": "~3.5",
