--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "cocur/slugify": "~1.1",
         "pelago/emogrifier": "1.0.*@dev",
         "knplabs/knp-components": "~1.2",
-        "twig/twig": "~1.23"
+        "twig/twig": "~1.23",
+        "silex/web-profiler": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1"
