--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
+        "php": ">=5.5.9",
         "silex/silex": "~1.3",
         "symfony/browser-kit": "~2.7,<3.0",
         "symfony/config": "~2.7,<3.0",
