--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,22 @@
 {
-    "author": "Borut Balazek <bobalazek124@gmail.com>",
-    "name": "bobalazek-web-application-starter-kit",
-    "dependencies": {
-        "animate.css": "~3.5",
-        "bootstrap": "~3.3",
-        "bootstrap-select": "~1.10",
-        "fontawesome": "~4.5",
-        "ink": "~1.0",
-        "jquery": "~2.1",
-        "jquery-migrate": "~1.3",
-        "modernizr": "~2.8",
-        "moment": "~2.13",
-        "respond": "~1.4",
-        "uri.js": "~1.18.0"
-    },
-    "resolutions": {
-        "jquery": "~2.1",
-        "modernizr": "~2.8"
-    }
+  "author": "Borut Balazek <bobalazek124@gmail.com>",
+  "name": "bobalazek-web-application-starter-kit",
+  "dependencies": {
+    "animate.css": "~3.5",
+    "bootstrap": "~3.3",
+    "bootstrap-select": "~1.10",
+    "fontawesome": "~4.5",
+    "ink": "~1.0",
+    "jquery": "~2.1",
+    "jquery-migrate": "~1.3",
+    "modernizr": "~2.8",
+    "moment": "~2.13",
+    "respond": "~1.4",
+    "uri.js": "~1.18.0",
+    "zxcvbn": "^4.3.0"
+  },
+  "resolutions": {
+    "jquery": "~2.1",
+    "modernizr": "~2.8"
+  }
 }
