--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Borut Balazek",
-            "email": "bobalazek124@gmail.de",
+            "email": "bobalazek124@gmail.com",
             "homepage": "http://bobalazek.com",
             "role": "Lead Developer"
         }
