--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,10 @@
         "symfony/yaml": "~2.7,<3.0",
         "doctrine/dbal": "~2.5",
         "doctrine/migrations": "1.0.*@dev",
-        "doctrine/orm": "~2.5",
+        "doctrine/orm": "^2.5",
+        "doctrine/annotations": "~1.4.0",
+        "doctrine/inflector": "~1.1.0",
+        "doctrine/cache": "~1.6.2",
         "swiftmailer/swiftmailer": "5.*",
         "igorw/config-service-provider": "~1.2",
         "dflydev/doctrine-orm-service-provider": "1.0.7",
