--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^7.0",
         "silex/silex": "~1.3",
+        "silex/web-profiler": "^1.0",
         "symfony/browser-kit": "~2.7,<3.0",
         "symfony/config": "~2.7,<3.0",
         "symfony/css-selector": "~2.7,<3.0",
@@ -35,25 +36,22 @@
         "symfony/twig-bridge": "~2.7,<3.0",
         "symfony/validator": "~2.7,<3.0",
         "symfony/yaml": "~2.7,<3.0",
-        "doctrine/migrations": "1.0.*@dev",
         "doctrine/annotations": "~1.4.0",
         "doctrine/cache": "~1.6.2",
         "doctrine/collections": "~1.4.0",
         "doctrine/common": "~2.7.3",
         "doctrine/dbal": "~2.5.13",
         "doctrine/inflector": "~1.1.0",
+        "doctrine/migrations": "1.0.*@dev",
         "doctrine/orm": "^2.5",
         "swiftmailer/swiftmailer": "5.*",
+        "twig/twig": "~1.23",
         "igorw/config-service-provider": "~1.2",
         "dflydev/doctrine-orm-service-provider": "1.0.7",
         "cocur/slugify": "~2.1",
         "pelago/emogrifier": "1.0.*@dev",
         "knplabs/knp-components": "~1.2",
-        "twig/twig": "~1.23",
-        "silex/web-profiler": "^1.0",
-        "intervention/image": "^2.4",
-        "vlucas/phpdotenv": "^2.4",
-        "gigablah/silex-oauth": "~1.3"
+        "vlucas/phpdotenv": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1"
@@ -73,7 +71,8 @@
         "post-update-cmd": "Application\\Tool\\Composer::postUpdateCmd"
     },
     "config": {
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "sort-packages": false
     },
     "minimum-stability": "dev",
     "prefer-stable": true
