--- a/composer.json
+++ b/composer.json
@@ -13,49 +13,38 @@
     ],
     "require": {
         "php": "^7.0",
-        "silex/silex": "~1.3",
-        "silex/web-profiler": "^1.0",
-        "symfony/browser-kit": "~2.7,<3.0",
-        "symfony/config": "~2.7,<3.0",
-        "symfony/css-selector": "~2.7,<3.0",
-        "symfony/doctrine-bridge": "~2.7,<3.0",
-        "symfony/dom-crawler": "~2.7,<3.0",
-        "symfony/filesystem": "~2.7,<3.0",
-        "symfony/finder": "~2.7,<3.0",
-        "symfony/form": "~2.7,<3.0",
-        "symfony/framework-bundle": "~2.7,<3.0",
-        "symfony/locale": "~2.7,<3.0",
-        "symfony/monolog-bridge": "~2.7,<3.0",
-        "symfony/options-resolver": "~2.7,<3.0",
-        "symfony/process": "~2.7,<3.0",
-        "symfony/security": "~2.7,<3.0",
-        "symfony/security-csrf": "~2.7,<3.0",
-        "symfony/serializer": "~2.7,<3.0",
-        "symfony/stopwatch": "~2.7,<3.0",
-        "symfony/translation": "~2.7,<3.0",
-        "symfony/twig-bridge": "~2.7,<3.0",
-        "symfony/validator": "~2.7,<3.0",
-        "symfony/yaml": "~2.7,<3.0",
-        "doctrine/annotations": "~1.4.0",
-        "doctrine/cache": "~1.6.2",
-        "doctrine/collections": "~1.4.0",
-        "doctrine/common": "~2.7.3",
-        "doctrine/dbal": "~2.5.13",
-        "doctrine/inflector": "~1.1.0",
-        "doctrine/instantiator": "~1.0.5",
-        "doctrine/migrations": "1.0.*@dev",
-        "doctrine/orm": "^2.5",
+        "silex/silex": "~2.1",
+        "doctrine/dbal": "~2.5",
+        "doctrine/migrations": "~1.1",
+        "doctrine/orm": "~2.5",
+        "saxulum/saxulum-doctrine-orm-manager-registry-provider": "~3.1",
         "swiftmailer/swiftmailer": "5.*",
-        "twig/twig": "~1.23",
-        "igorw/config-service-provider": "~1.2",
-        "dflydev/doctrine-orm-service-provider": "1.0.7",
-        "cocur/slugify": "~2.1",
-        "pelago/emogrifier": "1.0.*@dev",
+        "saxulum/config-service-provider": "~2.0",
+        "dflydev/doctrine-orm-service-provider": "~2.0",
+        "cocur/slugify": "~1.1",
+        "pelago/emogrifier": "dev-master",
         "knplabs/knp-components": "~1.2",
-        "vlucas/phpdotenv": "^2.4"
+        "ua-parser/uap-php": "~3.4",
+        "oro/doctrine-extensions": "dev-master",
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "mwhite/random-uagent": "dev-master",
+        "symfony/translation": "^3.3",
+        "symfony/security": "^3.3",
+        "symfony/framework-bundle": "^3.3",
+        "symfony/validator": "^3.3",
+        "symfony/form": "^3.3",
+        "symfony/config": "^3.3",
+        "symfony/twig-bridge": "^3.3",
+        "symfony/security-csrf": "^3.3",
+        "symfony/doctrine-bridge": "^3.3",
+        "ocramius/proxy-manager": "~2.0.4",
+        "vlucas/phpdotenv": "^2.4",
+        "silex/web-profiler": "^2.0",
+        "symfony/yaml": "^3.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.1"
+        "phpunit/phpunit": "~5.7",
+        "symfony/browser-kit": "^3.3"
     },
     "autoload": {
         "psr-4": {
