--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_script:
   - composer self-update
   - composer install --dev
 
-script: phpunit --configuration phpunit.xml
+script: ./bin/simple-phpunit
