--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~5.7",
-        "symfony/browser-kit": "^3.3"
+        "symfony/browser-kit": "^3.3",
+        "symfony/phpunit-bridge": "^3.3"
     },
     "autoload": {
         "psr-4": {
