--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,8 @@
         "pelago/emogrifier": "dev-master",
         "knplabs/knp-components": "~1.2",
         "ua-parser/uap-php": "~3.4",
-        "oro/doctrine-extensions": "dev-master",
+        "oro/doctrine-extensions": "~1.2",
         "mobiledetect/mobiledetectlib": "^2.8",
-        "mwhite/random-uagent": "dev-master",
         "symfony/translation": "^3.3",
         "symfony/security": "^3.3",
         "symfony/framework-bundle": "^3.3",
