--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,18 @@
     "require": {
         "php": "^7.0",
         "silex/silex": "~2.1",
-        "doctrine/dbal": "~2.5",
+        "doctrine/annotations": "~1.4.0",
+        "doctrine/cache": "~1.6.2",
+        "doctrine/collections": "~1.4.0",
+        "doctrine/common": "~2.7.3",
+        "doctrine/dbal": "~2.5.13",
+        "doctrine/doctrine-bundle": "~1.6.8",
+        "doctrine/doctrine-cache-bundle": "^1.3",
+        "doctrine/doctrine-migrations-bundle": "^1.2",
+        "doctrine/inflector": "~1.1.0",
+        "doctrine/instantiator": "~1.0.5",
+        "doctrine/orm": "^2.5",
         "doctrine/migrations": "~1.1",
-        "doctrine/orm": "~2.5",
         "saxulum/saxulum-doctrine-orm-manager-registry-provider": "~3.1",
         "swiftmailer/swiftmailer": "5.*",
         "saxulum/config-service-provider": "~2.0",
