--- a/app/configs/global-local.php.example
+++ b/app/configs/global-local.php.example
@@ -1,15 +1,15 @@
 <?php
 
-return array(
+return [
     // Database / Doctrine options
-    'database_options' => array(
-        'default' => array(
+    'database_options' => [
+        'default' => [
             'driver' => 'pdo_mysql',
             'host' => 'localhost',
             'dbname' => 'wask',
             'user' => 'wask',
             'password' => 'wask',
             'charset' => 'utf8',
-        ),
-    ),
-);
+        ],
+    ],
+];
