--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^7.0",
         "silex/silex": "~2.1",
+        "silex/web-profiler": "^2.0",
         "doctrine/annotations": "~1.4.0",
         "doctrine/cache": "~1.6.2",
         "doctrine/collections": "~1.4.0",
@@ -42,10 +43,10 @@
         "symfony/twig-bridge": "^3.3",
         "symfony/security-csrf": "^3.3",
         "symfony/doctrine-bridge": "^3.3",
+        "symfony/yaml": "^3.3",
         "ocramius/proxy-manager": "~2.0.4",
         "vlucas/phpdotenv": "^2.4",
-        "silex/web-profiler": "^2.0",
-        "symfony/yaml": "^3.3"
+        "zendframework/zend-code": "~3.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.7",
