--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": "^7.0",
-        "silex/silex": "~2.1",
+        "silex/silex": "~2.2",
         "silex/web-profiler": "^2.0",
         "doctrine/annotations": "~1.4.0",
         "doctrine/cache": "~1.6.2",
@@ -34,24 +34,29 @@
         "ua-parser/uap-php": "~3.4",
         "oro/doctrine-extensions": "~1.2",
         "mobiledetect/mobiledetectlib": "^2.8",
-        "symfony/translation": "^3.3",
-        "symfony/security": "^3.3",
-        "symfony/framework-bundle": "^3.3",
-        "symfony/validator": "^3.3",
-        "symfony/form": "^3.3",
-        "symfony/config": "^3.3",
-        "symfony/twig-bridge": "^3.3",
-        "symfony/security-csrf": "^3.3",
-        "symfony/doctrine-bridge": "^3.3",
-        "symfony/yaml": "^3.3",
+        "symfony/translation": "^3.4",
+        "symfony/security": "^3.4",
+        "symfony/cache": "^3.4",
+        "symfony/debug": "^3.4",
+        "symfony/property-access": "^3.4",
+        "symfony/options-resolver": "^3.4",
+        "symfony/var-dumper": "^3.4",
+        "symfony/framework-bundle": "^3.4",
+        "symfony/validator": "^3.4",
+        "symfony/form": "^3.4",
+        "symfony/config": "^3.4",
+        "symfony/twig-bridge": "^3.4",
+        "symfony/security-csrf": "^3.4",
+        "symfony/doctrine-bridge": "^3.4",
+        "symfony/yaml": "^3.4",
         "ocramius/proxy-manager": "~2.0.4",
         "vlucas/phpdotenv": "^2.4",
         "zendframework/zend-code": "~3.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.7",
-        "symfony/browser-kit": "^3.3",
-        "symfony/phpunit-bridge": "^3.3"
+        "symfony/browser-kit": "^3.4",
+        "symfony/phpunit-bridge": "^3.4"
     },
     "autoload": {
         "psr-4": {
