--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,12 @@
         "symfony/property-access": "^3.4",
         "symfony/options-resolver": "^3.4",
         "symfony/var-dumper": "^3.4",
+        "symfony/dependency-injection": "^3.4",
+        "symfony/filesystem": "^3.4",
+        "symfony/finder": "^3.4",
+        "symfony/inflector": "^3.4",
+        "symfony/intl": "^3.4",
+        "symfony/dom-crawler": "^3.4",
         "symfony/framework-bundle": "^3.4",
         "symfony/validator": "^3.4",
         "symfony/form": "^3.4",
